--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,94 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     tools:context=".PrincipalActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.Organizze.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Organizze.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include layout="@layout/content_principal" />
-
     <com.github.clans.fab.FloatingActionMenu
-
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="end|bottom"
-    android:layout_margin="10dp"
-    android:src="@drawable/fab_add"
-    app:fab_colorNormal="#DA4336"
-    app:fab_colorPressed="#E75043"
-    app:fab_colorRipple="#99FFFFFF"
-
-
-
-    >
-    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/fab"
+        fab:menu_icon="@drawable/ic_cadeado_cinza_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/menu_Despesa"
-        android:src="@drawable/ic_baseline_remove_circle_outline_24"
-        app:fab_label="Despesa"
-        app:fab_size="mini"
-        app:fab_colorNormal="#DA4336"
-        app:fab_colorPressed="#E75043"
-        app:fab_colorRipple="#99FFFFFF"
-        android:onClick="adicionarDespesa"
-        />
+        android:layout_gravity="end|bottom"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:menu_colorNormal="@color/Receita"
+        app:menu_colorPressed="@color/ReceitaAccent">
 
-    <com.github.clans.fab.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/menu_Receita"
-        android:src="@drawable/fab_add"
-        app:fab_label="Receita"
-        app:fab_size="mini"
-        app:fab_colorNormal="#21A35F"
-        app:fab_colorPressed="#FFFFFF"
-        app:fab_colorRipple="#99FFFFFF"
-        android:onClick="adicionarReceita"
-        />
         <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_despesa"
+            fab:fab_colorNormal="@color/DespesaDark"
+            fab:fab_label="Despesa"
+            fab:fab_size="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/menu_sair"
-            android:src="@drawable/fab_add"
-            app:fab_label="SAIR"
-            app:fab_size="mini"
-            app:fab_colorNormal="#21A35F"
-            app:fab_colorPressed="#FFFFFF"
-            app:fab_colorRipple="#99FFFFFF"
-            android:onClick="sairPrograma"
-            />
-</com.github.clans.fab.FloatingActionMenu>
+            android:onClick="adicionarDespesa"
+            android:src="@drawable/ic_baseline_remove_circle_outline_24" />
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_receita"
+            fab:fab_colorNormal="@color/Receita"
+            fab:fab_label="Receita"
+            fab:fab_size="mini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="adicionarReceita"
+            android:src="@drawable/ic_email_cinza_24dp" />
 
+    </com.github.clans.fab.FloatingActionMenu>
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="410dp"
+        android:layout_height="180dp"
+        android:background="#1B40C6"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
+        <TextView
+            android:id="@+id/textSaudacao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Carregando..."
+            android:textAlignment="center"
+            android:textColor="#E3E3E3" />
 
+        <TextView
+            android:id="@+id/textSaldo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="R$0,00"
+            android:textAlignment="center"
+            android:textColor="#ECECEC"
+            android:textSize="20sp"
+            fab:layout_constraintEnd_toEndOf="parent"
+            fab:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
 
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendario"
+        android:layout_width="399dp"
+        android:layout_height="52dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.0"
+        fab:layout_constraintEnd_toEndOf="parent"
+        app:mcv_tileSize="50dp"
+        fab:layout_constraintStart_toStartOf="parent" />
 
-
-
-
-
-
-
-
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="413dp"
+        android:layout_height="306dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.534"
+        fab:layout_constraintBottom_toBottomOf="parent"
+        fab:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
