--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"> <EditText
+    tools:context=".LoginActivity">
+    <EditText
     android:id="@+id/editText4"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
